--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>✨ Heavenly EPUB Reader 📖</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="assets/placeholder.png" />
-  <!-- EPUB.js CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/epubjs/dist/epub.min.js"></script>
+  <!-- EPUB.js -->
+  <script src="https://unpkg.com/epubjs/dist/epub.min.js"></script>
 </head>
 <body>
   <!-- Header -->
@@ -18,62 +18,19 @@
       <button id="settings-btn">⚙️ Settings</button>
       <button id="shortcuts-btn">⌨️ Shortcuts</button>
       <button id="info-btn" class="reader-only hidden">ℹ️ Info</button>
+      <!-- FIXED: Theme toggle moved outside hidden group -->
+      <button id="theme-toggle">🌙 Dark Mode</button>
+    </div>
 
-      <div class="reader-only hidden flex-row gap">
-        <button id="prev-ch" title="Previous Chapter">⟵ Prev</button>
-        <input id="chapter-search" type="search" placeholder="Search chapters..." />
-        <button id="next-ch" title="Next Chapter">Next ⟶</button>
-      </div>
-
-      <div class="options reader-only hidden flex-row gap">
-        <select id="reading-mode" title="Reading mode">
-          <option value="scrolled" selected>Mode: Scrolling</option>
-          <option value="paginated">Mode: Paginated</option>
-        </select>
-
-        <select id="font-size">
-          <option value="90%">Font: S</option>
-          <option value="100%" selected>Font: M</option>
-          <option value="110%">Font: L</option>
-          <option value="125%">Font: XL</option>
-          <option value="140%">Font: XXL</option>
-        </select>
-
-        <label class="color-picker">
-          <span>Text</span>
-          <input id="text-color" type="color" value="#111111" />
-        </label>
-
-        <label class="color-picker">
-          <span>Background</span>
-          <select id="bg-style">
-            <option value="transparent" selected>Transparent</option>
-            <option value="black">Black</option>
-          </select>
-        </label>
-
-        <button id="theme-toggle"></button>
-      </div>
+    <!-- Reader-only controls -->
+    <div class="reader-only hidden flex-row gap">
+      <button id="prev-ch" title="Previous Chapter">⟵ Prev</button>
+      <input id="chapter-search" type="search" placeholder="Search chapters..." />
+      <button id="next-ch" title="Next Chapter">Next ⟶</button>
     </div>
   </header>
 
-  <!-- Continue / Recently Read / Finished / Library -->
-  <section id="continue" class="glass hidden">
-    <div class="library-head"><h2>▶️ Continue Reading</h2></div>
-    <div id="continue-container"></div>
-    <button id="finish-btn" class="finish-btn">✅ Mark as Finished</button>
-  </section>
-
-  <section id="recent" class="glass hidden">
-    <div class="library-head"><h2>🕘 Recently Read</h2></div>
-    <div id="recent-grid" class="grid"></div>
-  </section>
-
-  <section id="finished" class="glass hidden">
-    <div class="library-head"><h2>🏁 Finished Books</h2></div>
-    <div id="finished-grid" class="grid"></div>
-  </section>
-
+  <!-- Library -->
   <section id="library" class="glass">
     <div class="library-head">
       <h2>📚 Your Books</h2>
@@ -85,17 +42,14 @@
   <!-- Reader -->
   <main id="reader-layout" class="hidden">
     <aside id="toc" class="glass">
-      <div class="toc-head">
-        <h3>Table of Contents</h3>
-        <input id="toc-filter" type="search" placeholder="Filter chapters..." />
-      </div>
+      <h3>Table of Contents</h3>
+      <input id="toc-filter" type="search" placeholder="Filter chapters..." />
       <ul id="toc-list"></ul>
     </aside>
-    <section id="viewer-wrap" class="glass"><div id="viewer"></div></section>
+    <section id="viewer-wrap" class="glass">
+      <div id="viewer"></div>
+    </section>
   </main>
-
-  <!-- Background Gallery -->
-  <div id="bg-gallery" class="glass"></div>
 
   <!-- Credits -->
   <button id="credits-btn">💬 Contact / Credits</button>
@@ -103,12 +57,7 @@
     <div class="modal-content glass">
       <span class="close-modal" data-target="credits-modal">&times;</span>
       <h2>Website Owner & Credits</h2>
-      <p>Website by <a href="https://github.com/Bismay-exe" target="_blank">GitHub</a></p>
-      <p>Follow me on 
-        <a href="https://www.instagram.com/bismay.exe" target="_blank">Instagram</a> · 
-        <a href="https://t.me/bismay_exe" target="_blank">Telegram</a>
-      </p>
-      <p>Join my channel: <a href="https://t.me/BismaysInventory" target="_blank">Click here</a></p>
+      <p>Website by <a href="https://github.com/Bismay-exe" target="_blank">Bismay-exe</a></p>
     </div>
   </div>
 
@@ -126,12 +75,9 @@
     <div class="modal-content glass">
       <span class="close-modal" data-target="shortcuts-modal">&times;</span>
       <h2>Keyboard Shortcuts</h2>
-      <ul class="shortcut-list">
-        <li><kbd>←</kbd>/<kbd>→</kbd> : Prev / Next chapter</li>
-        <li><kbd>Ctrl</kbd>+<kbd>F</kbd> : Search chapters</li>
-        <li><kbd>D</kbd> : Toggle Dark/Light</li>
-        <li><kbd>M</kbd> : Toggle Mode</li>
-        <li><kbd>+</kbd>/<kbd>-</kbd> : Font size</li>
+      <ul>
+        <li><kbd>←</kbd>/<kbd>→</kbd> Prev/Next Chapter</li>
+        <li><kbd>D</kbd> Toggle Dark/Light Mode</li>
       </ul>
     </div>
   </div>
@@ -141,45 +87,11 @@
     <div class="modal-content glass">
       <span class="close-modal" data-target="settings-modal">&times;</span>
       <h2>⚙️ Settings</h2>
-      <div class="settings-group">
-        <label><input type="checkbox" id="settings-theme"> Dark Theme by default</label>
-      </div>
-      <div class="settings-group">
-        <label>Default Reading Mode:
-          <select id="settings-reading-mode">
-            <option value="scrolled">Scrolling</option>
-            <option value="paginated">Paginated</option>
-          </select>
-        </label>
-      </div>
-      <div class="settings-group">
-        <label>Default Font Size:
-          <select id="settings-font-size">
-            <option value="90%">S</option>
-            <option value="100%" selected>M</option>
-            <option value="110%">L</option>
-            <option value="125%">XL</option>
-            <option value="140%">XXL</option>
-          </select>
-        </label>
-      </div>
-      <div class="settings-group danger">
-        <button id="clear-recent">🗑️ Clear Recently Read</button>
-        <button id="clear-finished">🗑️ Clear Finished Books</button>
-        <button id="reset-all">🗑️ Reset All Settings</button>
-      </div>
+      <p><em>More settings coming soon…</em></p>
     </div>
   </div>
 
   <footer class="glass"><p>© 2025 Heavenly EPUB Reader</p></footer>
-
   <script src="script.js"></script>
-  <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', () => {
-        navigator.serviceWorker.register('./sw.js').catch(console.error);
-      });
-    }
-  </script>
 </body>
 </html>
