--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Heavenly EPUB Reader</title>
+  <title>✨ Heavenly EPUB Reader 📖</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="assets/placeholder.png" />
-  <!-- EPUB.js CDN -->
-  <script src="https://unpkg.com/epubjs/dist/epub.min.js"></script>
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <!-- Header -->
@@ -15,9 +17,9 @@
     <h1>✨ Heavenly EPUB Reader 📖</h1>
     <div class="controls">
       <button id="home-btn" title="Back to Library">🏠 Library</button>
-      <button id="settings-btn">⚙️ Settings</button>
-      <button id="shortcuts-btn">⌨️ Shortcuts</button>
-      <button id="info-btn" class="reader-only hidden">ℹ️ Info</button>
+      <button id="settings-btn" title="Settings">⚙️ Settings</button>
+      <button id="shortcuts-btn" title="Keyboard Shortcuts">⌨️ Shortcuts</button>
+      <button id="info-btn" class="reader-only hidden" title="Book Info">ℹ️ Info</button>
 
       <div class="reader-only hidden flex-row gap">
         <button id="prev-ch" title="Previous Chapter">⟵ Prev</button>
@@ -26,12 +28,7 @@
       </div>
 
       <div class="options reader-only hidden flex-row gap">
-        <select id="reading-mode" title="Reading mode">
-          <option value="scrolled" selected>Mode: Scrolling</option>
-          <option value="paginated">Mode: Paginated</option>
-        </select>
-
-        <select id="font-size">
+        <select id="font-size" title="Font size">
           <option value="90%">Font: S</option>
           <option value="100%" selected>Font: M</option>
           <option value="110%">Font: L</option>
@@ -61,12 +58,14 @@
   <section id="library" class="glass">
     <div class="library-head">
       <h2>📚 Your Books</h2>
-      <p class="muted">Books are loaded from <code>/epubs</code> with covers in <code>/covers</code> (matching filenames).</p>
+      <p class="muted">Place books under <code>/books/&lt;BookFolder&gt;</code> with a <code>cover.jpg/png</code> and <code>chapters.json</code>.</p>
     </div>
     <div id="book-grid" class="grid"></div>
   </section>
 
+  <!-- Reader Layout -->
   <main id="reader-layout" class="hidden">
+    <!-- TOC / Sidebar -->
     <aside id="toc" class="glass">
       <div class="toc-head">
         <h3>Table of Contents</h3>
@@ -75,33 +74,26 @@
       <ul id="toc-list"></ul>
     </aside>
 
+    <!-- Viewer -->
     <section id="viewer-wrap" class="glass">
-      <div id="viewer"></div>
+      <article id="viewer" class="chapter-body"></article>
     </section>
   </main>
 
-  <!-- Floating Credits Button -->
+  <!-- Credits -->
   <button id="credits-btn">💬 Contact / Credits</button>
-
-  <!-- Credits Modal -->
-  <div id="credits-modal" class="modal hidden">
+  <div id="credits-modal" class="modal">
     <div class="modal-content glass">
       <span class="close-modal" data-target="credits-modal">&times;</span>
       <h2>Website Owner & Credits</h2>
       <p>Website by <a href="https://github.com/Bismay-exe" target="_blank">Bismay-exe</a></p>
-      <p>
-        Follow me on 
-        <a href="https://www.instagram.com/bismay.exe" target="_blank">Instagram</a> &middot;
-        <a href="https://t.me/bismay_exe" target="_blank">Telegram</a>
-      </p>
-      <p>Join my Telegram channel: 
-        <a href="https://t.me/BismaysInventory" target="_blank">Click here</a>
-      </p>
+      <p>Follow: <a href="https://www.instagram.com/bismay.exe" target="_blank">Instagram</a> · <a href="https://t.me/bismay_exe" target="_blank">Telegram</a></p>
+      <p>Channel: <a href="https://t.me/BismaysInventory" target="_blank">Bismay's Inventory</a></p>
     </div>
   </div>
 
   <!-- Shortcuts Modal -->
-  <div id="shortcuts-modal" class="modal hidden">
+  <div id="shortcuts-modal" class="modal">
     <div class="modal-content glass">
       <span class="close-modal" data-target="shortcuts-modal">&times;</span>
       <h2>Keyboard Shortcuts</h2>
@@ -109,27 +101,18 @@
         <li><kbd>←</kbd> / <kbd>→</kbd> : Prev / Next chapter</li>
         <li><kbd>Ctrl</kbd> + <kbd>F</kbd> : Focus chapter search</li>
         <li><kbd>D</kbd> : Toggle Dark/Light theme</li>
-        <li><kbd>M</kbd> : Toggle Reading Mode</li>
         <li><kbd>+</kbd> / <kbd>-</kbd> : Increase / Decrease font size</li>
       </ul>
     </div>
   </div>
 
   <!-- Settings Modal -->
-  <div id="settings-modal" class="modal hidden">
+  <div id="settings-modal" class="modal">
     <div class="modal-content glass">
       <span class="close-modal" data-target="settings-modal">&times;</span>
       <h2>⚙️ Settings</h2>
       <div class="settings-group">
         <label><input type="checkbox" id="settings-theme"> Dark Theme by default</label>
-      </div>
-      <div class="settings-group">
-        <label>Default Reading Mode:
-          <select id="settings-reading-mode">
-            <option value="scrolled">Scrolling</option>
-            <option value="paginated">Paginated</option>
-          </select>
-        </label>
       </div>
       <div class="settings-group">
         <label>Default Font Size:
@@ -141,6 +124,9 @@
             <option value="140%">XXL</option>
           </select>
         </label>
+      </div>
+      <div class="settings-group danger">
+        <button id="reset-all">🗑️ Reset All Settings</button>
       </div>
     </div>
   </div>
