--- a/index.html
+++ b/index.html
@@ -2,137 +2,36 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>✨ Heavenly EPUB Reader 📖</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Heavenly EPUB Reader</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="assets/placeholder.png" />
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <!-- Header -->
-  <header class="glass">
-    <h1>✨ Heavenly EPUB Reader 📖</h1>
-    <div class="controls">
-      <button id="home-btn" title="Back to Library">🏠 Library</button>
-      <button id="settings-btn" title="Settings">⚙️ Settings</button>
-      <button id="shortcuts-btn" title="Keyboard Shortcuts">⌨️ Shortcuts</button>
-      <button id="info-btn" class="reader-only hidden" title="Book Info">ℹ️ Info</button>
-
-      <div class="reader-only hidden flex-row gap">
-        <button id="prev-ch" title="Previous Chapter">⟵ Prev</button>
-        <input id="chapter-search" type="search" placeholder="Search chapters..." />
-        <button id="next-ch" title="Next Chapter">Next ⟶</button>
-      </div>
-
-      <div class="options reader-only hidden flex-row gap">
-        <select id="font-size" title="Font size">
-          <option value="90%">Font: S</option>
-          <option value="100%" selected>Font: M</option>
-          <option value="110%">Font: L</option>
-          <option value="125%">Font: XL</option>
-          <option value="140%">Font: XXL</option>
-        </select>
-
-        <label class="color-picker">
-          <span>Text</span>
-          <input id="text-color" type="color" value="#111111" />
-        </label>
-
-        <label class="color-picker">
-          <span>Background</span>
-          <select id="bg-style">
-            <option value="transparent" selected>Transparent</option>
-            <option value="black">Black</option>
-          </select>
-        </label>
-
-        <button id="theme-toggle">🌙 Dark Mode</button>
-      </div>
-    </div>
+  <header>
+    <h1>Heavenly EPUB Reader</h1>
+    <nav>
+      <button id="prevBtn" aria-label="Previous chapter">◀</button>
+      <select id="chapterSelect" aria-label="Select chapter"></select>
+      <button id="nextBtn" aria-label="Next chapter">▶</button>
+    </nav>
   </header>
 
-  <!-- Library -->
-  <section id="library" class="glass">
-    <div class="library-head">
-      <h2>📚 Your Books</h2>
-      <p class="muted">Place books under <code>/books/&lt;BookFolder&gt;</code> with a <code>cover.jpg/png</code> and <code>chapters.json</code>.</p>
-    </div>
-    <div id="book-grid" class="grid"></div>
-  </section>
-
-  <!-- Reader Layout -->
-  <main id="reader-layout" class="hidden">
-    <!-- TOC / Sidebar -->
-    <aside id="toc" class="glass">
-      <div class="toc-head">
-        <h3>Table of Contents</h3>
-        <input id="toc-filter" type="search" placeholder="Filter chapters..." />
-      </div>
-      <ul id="toc-list"></ul>
+  <main>
+    <aside>
+      <h2 class="aside-title">Library</h2>
+      <ul id="bookList" aria-label="Books"></ul>
     </aside>
-
-    <!-- Viewer -->
-    <section id="viewer-wrap" class="glass">
-      <article id="viewer" class="chapter-body"></article>
+    <section id="reader">
+      <div id="coverWrap">
+        <img id="cover" alt="Book cover" />
+        <h2 id="bookTitle"></h2>
+      </div>
+      <iframe id="chapterFrame" title="Chapter content" sandbox=""></iframe>
     </section>
   </main>
 
-  <!-- Credits -->
-  <button id="credits-btn">💬 Contact / Credits</button>
-  <div id="credits-modal" class="modal">
-    <div class="modal-content glass">
-      <span class="close-modal" data-target="credits-modal">&times;</span>
-      <h2>Website Owner & Credits</h2>
-      <p>Website by <a href="https://github.com/Bismay-exe" target="_blank">Bismay-exe</a></p>
-      <p>Follow: <a href="https://www.instagram.com/bismay.exe" target="_blank">Instagram</a> · <a href="https://t.me/bismay_exe" target="_blank">Telegram</a></p>
-      <p>Channel: <a href="https://t.me/BismaysInventory" target="_blank">Bismay's Inventory</a></p>
-    </div>
-  </div>
-
-  <!-- Shortcuts Modal -->
-  <div id="shortcuts-modal" class="modal">
-    <div class="modal-content glass">
-      <span class="close-modal" data-target="shortcuts-modal">&times;</span>
-      <h2>Keyboard Shortcuts</h2>
-      <ul class="shortcut-list">
-        <li><kbd>←</kbd> / <kbd>→</kbd> : Prev / Next chapter</li>
-        <li><kbd>Ctrl</kbd> + <kbd>F</kbd> : Focus chapter search</li>
-        <li><kbd>D</kbd> : Toggle Dark/Light theme</li>
-        <li><kbd>+</kbd> / <kbd>-</kbd> : Increase / Decrease font size</li>
-      </ul>
-    </div>
-  </div>
-
-  <!-- Settings Modal -->
-  <div id="settings-modal" class="modal">
-    <div class="modal-content glass">
-      <span class="close-modal" data-target="settings-modal">&times;</span>
-      <h2>⚙️ Settings</h2>
-      <div class="settings-group">
-        <label><input type="checkbox" id="settings-theme"> Dark Theme by default</label>
-      </div>
-      <div class="settings-group">
-        <label>Default Font Size:
-          <select id="settings-font-size">
-            <option value="90%">S</option>
-            <option value="100%" selected>M</option>
-            <option value="110%">L</option>
-            <option value="125%">XL</option>
-            <option value="140%">XXL</option>
-          </select>
-        </label>
-      </div>
-      <div class="settings-group danger">
-        <button id="reset-all">🗑️ Reset All Settings</button>
-      </div>
-    </div>
-  </div>
-
-  <footer class="glass">
-    <p>© 2025 Heavenly EPUB Reader</p>
+  <footer>
+    <p>Drop your book folders into <code>books/</code>. Chapters must be <code>.xhtml</code>. Each book needs a <code>chapters.json</code> (use tools to generate).</p>
   </footer>
 
   <script src="script.js"></script>
